# OS

Channel/: buffered_channel.h
Lab1/Linux/: CMakeLists.txt  Number.cpp  Number.h  TestApp  Vector.cpp  Vector.h  main.cpp
Lab1/Linux/Number/: CMakeLists.txt
Lab1/Linux/Test/: CMakeLists.txt
Lab1/Linux/Vector/: CMakeLists.txt
Lab1/Windows/: Number.cpp  Number.h  Number.lib  Number.vcxproj  Test.vcxproj  Vector.cpp  Vector.h  Vector.vcxproj  main.cpp
Lab2/Linux/: CMakeLists.txt  Makefile  MatrixUtils.cpp  MatrixUtils.h  ParallelMultiplyPthread.cpp  ParallelMultiplyPthread.h  main.cpp
Lab2/Windows/: MatrixTread.vcxproj  MatrixUtils.cpp  MatrixUtils.h  ParallelMultiply.cpp  ParallelMultiply.h  ParallelMultiplyWindows.cpp  ParallelMultiplyWindows.h  main.cpp
Pipes/Linux/: CMakeLists.txt  Makefile  main.cpp
Pipes/Windows/: Pipe.vcxproj  main.cpp
Process/: Killer.vcxproj  User.cpp
Process/Linux/: CMakeLists.txt  Killer.cpp  Makefile  User.cpp
Process/Windows/: Killer.cpp  User.vcxproj
